  * ExtractIcons, ExtractIcon, ExtractNearestIcon, Combine methods:
    + New overloads that can be used to prevent compression if the result icon contains larger images.
	- The original overloads prevent compression in Windows XP and allows it in Windows Vista and above.
  + SaveHighQuality method: New forceUncompressedResult optional parameter.

* Icons class:
  + New FromStream methods.
  - Information, Warning, Question, Error, Shield, Application,
    SecurityShield, SecuritySuccess, SecurityWarning, SecurityQuestion, SecurityError properties:
	If obtained in Windows XP, the resulting icon does not contain compressed images.
  * Combine methods:
    + New overloads that can be used to prevent compression if the result icon contains larger images.
	- The original overloads prevent compression in Windows XP and allows it in Windows Vista and above.
  + Application property: 64x64 image has been added.
  + Information property: 64x64, 24x24 and 20x20 images have been added.
  + Warning property: 64x64, 24x24 and 20x20 images have been added.
  + Error property: 64x64 and 20x20 images have been added.
  + Question property: 64x64 image has been replaced, 24x24 and 20x20 images have been added.


~~~~~~~~~
* v4.6.1:
~~~~~~~~~

* KGySoft.Drawing namespace:
============================
* IconExtensions class:
  - ToMultiResBitmap: Fixing InvalidOperationException
  - ExtractBitmap and ExtractIcon overloads: Not creating unnecessary Bitmap/Icon instances, which would be discarded anyway.


~~~~~~~~~
! v4.6.0:
~~~~~~~~~

! Assembly: Applying SecurityRuleSet.Level2 and adjusting security critical calls in the whole assembly.
  This is a breaking change for .NET4.0 and above only if the caller assembly is partially trusted or is
  security transparent and tries to call the few of the public methods, which are security critical.
* Moving the repository to GitHub
! Referencing KGySoft.CoreLibraries 4.6.0 and using its public resources for general messages.